styles.css
body {
  font-family: 'Nunito', sans-serif;
  background-color: #535353;
  overflow-x: hidden;
}

html {
  scroll-behavior: smooth;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--nav-text); 
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--header-color); 
  border-radius: 10px;
  cursor: pointer;
}

:root {
  /* --header-color: rgba(245, 219, 21, 0.8); */
  --header-color: #f5db15;
  --body-text:  #333;
  --nav-text: #929292;
  --hover-text: #6d6b6b;
}

/* Header */
header {
  display: flex;
  justify-content: center;
  align-items: center;
}

#outer-box {
  height: 100vh;
  width: 100vw;
  /* background-image: url('assets/temp-img.png'); */
  background-image: url('assets/bg.svg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

#overlay {
  position: absolute;
  z-index: 1;
  opacity: 0.4;
  background-color: #333;
  height: 100vh;
  width: 100vw;
}

.title {
  color: var(--header-color);
  text-transform: uppercase;
  z-index: 2;
  width: 80vw;
  letter-spacing: 3px;
  line-height: 2.5em;
}

.title > h1 {
  font-size: 3em;
  font-weight: 800;
}

.title > h2 {
  font-size: 1.5em;
  font-weight: 800;
}

/* Nav Bar */
nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100vw;
  height: 10vh;
  background-color: var(--header-color);
  font-size: 1em;
  text-transform: uppercase;
}

.navbar > h4 {
  cursor: pointer;
  font-family: 'Nunito', sans-serif;
  color: var(--nav-text);
  padding: 10px;
  font-weight: 800;
  transition: .5s all ease;
}

.navbar > h4:hover {
  color: var(--hover-text);
}

.scrolled {
  position: sticky;
  top: 0;
  z-index: 5;
}

/* About, Skills */
section {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: #fff;
  text-align: left;
}

section:nth-of-type(1) {
  background-color: rgba(9, 148, 235, 0.35);
}

section:nth-of-type(2) {
  background-color: rgba(96, 9, 235, 0.35);
}

section:nth-of-type(3) {
  background-color: rgba(21, 47, 245, 0.35);
  padding: 60px 0px;
  padding-bottom: 10vh;
}

section:nth-of-type(4) {
  background-color: rgba(236, 10, 36, 0.35);
}

section > h1 {
  margin: 20px;
  width: 50vw;
  font-weight: 800;
  font-size: 2.5em;
  letter-spacing: 2px;
}

h3 {
  margin: 20px;
  width: 80vw;
  font-size: 1.5em;
  line-height: 20px;
  font-weight: 800;

}

p {
  margin: 20px;
  width: 50vw;
  line-height: 20px;
}

/* Skills */
/* #skills {
} */

.skill-list {
  display: flex;
  flex-direction: column;
  width: 50vw;
  font-size: 1.5em;
  line-height: 1.5em;
  letter-spacing: 0.15em;
  font-weight: 800;
}

/* Portfolio */
#portfolio {
  height: auto;
}

#portfolio > .site-link {
  text-align: left;
}

#portfolio > h1 {
  width: 80vw;
  margin-top: 10vh;
}

.project > p {
  margin: 20px 0;
  width: 80vw;
}

a {
  text-decoration: none; cursor: pointer;
  font-family: 'Nunito', sans-serif;
  padding: 2.5px;
  font-weight: 800;
  color: var(--nav-text);
  /* color: #fff; */
  width: 80vw;
  transition: .5s all ease;
}

a:hover {
  color: var(--hover-text);
}

.project-box {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project-box > h3 {
  margin-bottom: 10px; 
}

.project {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
}

img {
  width: 80vw;
  margin-top: 10px;
}

/* Contact */

.icons {
  display: flex;
  align-items: center;
  flex-direction: row;
  /* justify-content: flex-start; */
  width: 51.5vw;
}

.fab, .fas, .far {
  font-size: 3em;
  margin: 5px;
}

@media only screen and (min-width: 760px) {

  /* Header */
  .title {
    width: unset;
  }

  /* Nav Bar */
  .navbar > h4 {
    font-size: 1.5em;
    padding: 20px;
  }

  /* About */

  section > #about > h1 {
    margin-top: 10vh !important;
  }

  /* Skills */
  /* .skill-list {
    justify-content: space-between;
    flex-direction: row;
    flex-wrap: wrap;
    font-weight: 800;
  } */

  .skill-list > h2:hover {
    animation: skills .2s ease-in-out forwards;
    cursor: none;
  }
  
  @keyframes skills {
    100% {
      transform: translateY(-2px);
      text-shadow: 
      0px 1px 0px var(--header-color),
      0px 2px 0px var(--header-color);
    }
  }

  /* Portfolio */

.project {
  flex-direction: row;
}

.project > p {
  margin: 0 0 0 20px;
  width: 30vw;
}

img {
  width: 50%;
  margin-left: 10vw;
}


.project-box:nth-of-type(2n) {
  text-align: right;
  width: 90vw;
  margin: 4vh 0;
}

.project-box:nth-of-type(2n) > .project {
  flex-direction: row-reverse !important;
}

.project-box:nth-of-type(2n) > .project > img {
  margin-right: 5vw;
  margin-left: 20px;
}

.project-box:nth-of-type(2) > .project > p {
  margin-left: 0;
  text-align: right;
}
  
}

